crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@132.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '{(10,20),(30,40),(50,60)}'::nummultirange && '(42,92)'::numrange;"
---
SelectStmt@0..73
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..72
    AExpr@7..72
      TypeCast@7..49
        AConst@7..34
          Sconst@7..34 "'{(10,20),(30,40),(50 ..."
        Typecast@34..36 "::"
        TypeName@36..49
          Ident@36..49 "nummultirange"
      Whitespace@49..50 " "
      Op@50..52 "&&"
      Whitespace@52..53 " "
      TypeCast@53..72
        AConst@53..62
          Sconst@53..62 "'(42,92)'"
        Typecast@62..64 "::"
        TypeName@64..72
          Ident@64..72 "numrange"
  Ascii59@72..73 ";"

