crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@137.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT nummultirange(numrange(null,null)) @> numrange(2,null);"
---
SelectStmt@0..62
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..60
    AExpr@7..60
      FuncCall@7..39
        Ident@7..20 "nummultirange"
        Ascii40@20..21 "("
        FuncCall@21..39
          Ident@21..29 "numrange"
          Ascii40@29..30 "("
          AConst@30..34
            NullP@30..34 "null"
          Ascii44@34..35 ","
          AConst@35..39
            NullP@35..39 "null"
      Ascii41@39..40 ")"
      Ascii41@40..41 ")"
      Whitespace@41..42 " "
      Op@42..44 "@>"
      Whitespace@44..45 " "
      FuncCall@45..60
        Ident@45..53 "numrange"
        Ascii40@53..54 "("
        AConst@54..55
          Iconst@54..55 "2"
        Ascii44@55..56 ","
        AConst@56..60
          NullP@56..60 "null"
  Ascii41@60..61 ")"
  Ascii59@61..62 ";"

